--- a/articles/key-vault/toc.yml
+++ b/articles/key-vault/toc.yml
@@ -1,185 +1,184 @@
-items:
 - name: Dokumentation om Key Vault
   href: index.yml
 - name: Översikt
   items:
-  - name: Om Key Vault
-    href: key-vault-overview.md
+    - name: Om Key Vault
+      href: key-vault-overview.md
 - name: Snabbstarter
-  items:
-  - name: Ange och hämta en hemlighet – CLI
-    href: quick-create-cli.md
-  - name: Ange och hämta en hemlighet – PowerShell
-    href: quick-create-powershell.md
-  - name: Ange och hämta en hemlighet – Portal
-    href: quick-create-portal.md
-  - name: Ange och hämta en hemlighet – .NET
-    href: quick-create-net.md
-  - name: Ange och hämta en hemlighet – Node.js
-    href: quick-create-node.md
-  - name: Ange och hämta en hemlighet – Resource Manager-mall
-    displayName: resource manager, resource manager template, arm
-    href: quick-create-template.md
   expanded: true
+  items:
+    - name: Ange och hämta en hemlighet – CLI
+      href: quick-create-cli.md
+    - name: Ange och hämta en hemlighet – PowerShell
+      href: quick-create-powershell.md
+    - name: Ange och hämta en hemlighet – Portal
+      href: quick-create-portal.md
+    - name: Ange och hämta en hemlighet – .NET
+      href: quick-create-net.md
+    - name: Ange och hämta en hemlighet – Node.js
+      href: quick-create-node.md
+    - name: Ange och hämta en hemlighet – Resource Manager-mall
+      displayName: 'resource manager, resource manager template, arm'
+      href: quick-create-template.md
 - name: Självstudier
   items:
-  - name: Azure Web Apps
-    items:
-    - name: Azure Key Vault med Azure Web App i .NET
-      href: tutorial-net-create-vault-azure-web-app.md
-  - name: Virtuell Azure-dator
-    items:
-    - name: Virtuell Linux-dator
+    - name: Azure Web Apps
       items:
-      - name: .NET
-        href: tutorial-net-linux-virtual-machine.md
-      - name: Python
-        href: tutorial-python-linux-virtual-machine.md
-    - name: Virtuell Windows-dator
+        - name: Azure Key Vault med Azure Web App i .NET
+          href: tutorial-net-create-vault-azure-web-app.md
+    - name: Virtuell Azure-dator
       items:
-      - name: .NET
-        href: tutorial-net-windows-virtual-machine.md
-      - name: Python
-        href: tutorial-python-windows-virtual-machine.md
-  - name: Lagringskontonycklar
-    items:
-    - name: Hanterade lagringskontonycklar med Azure CLI
-      href: key-vault-ovw-storage-keys.md
-    - name: Hanterade lagringskontonycklar med PowerShell
-      href: key-vault-overview-storage-keys-powershell.md
-  - name: Azure Containers
-    href: ../container-instances/container-instances-managed-identity.md
-  - name: Azure Resource Manager-mall
-    href: ../azure-resource-manager/resource-manager-keyvault-parameter.md
-  - name: Konfigurera nyckelrotation och granskning
-    href: key-vault-key-rotation-log-monitoring.md
+        - name: Virtuell Linux-dator
+          items:
+            - name: .NET
+              href: tutorial-net-linux-virtual-machine.md
+            - name: Python
+              href: tutorial-python-linux-virtual-machine.md
+        - name: Virtuell Windows-dator
+          items:
+            - name: .NET
+              href: tutorial-net-windows-virtual-machine.md
+            - name: Python
+              href: tutorial-python-windows-virtual-machine.md
+    - name: Lagringskontonycklar
+      items:
+        - name: Hanterade lagringskontonycklar med Azure CLI
+          href: key-vault-ovw-storage-keys.md
+        - name: Hanterade lagringskontonycklar med PowerShell
+          href: key-vault-overview-storage-keys-powershell.md
+    - name: Azure Containers
+      href: ../container-instances/container-instances-managed-identity.md
+    - name: Azure Resource Manager-mall
+      href: ../azure-resource-manager/resource-manager-keyvault-parameter.md
+    - name: Konfigurera nyckelrotation och granskning
+      href: key-vault-key-rotation-log-monitoring.md
 - name: Exempel
   items:
-  - name: Kodexempel
-    href: https://azure.microsoft.com/resources/samples/?service=key-vault
+    - name: Kodexempel
+      href: 'https://azure.microsoft.com/resources/samples/?service=key-vault'
 - name: Begrepp
   items:
-  - name: Vad är Key Vault?
-    href: key-vault-whatis.md
-  - name: Säkra ditt nyckelvalv
-    href: key-vault-secure-your-key-vault.md
-  - name: Säkerhetsvärldar
-    href: key-vault-ovw-security-worlds.md
-  - name: Mjuk borttagning
-    href: key-vault-ovw-soft-delete.md
-  - name: Begränsning
-    href: key-vault-ovw-throttling.md
-  - name: Slutpunkter för virtuellt nätverk
-    href: key-vault-overview-vnet-service-endpoints.md
-  - name: Autentisering, begäranden och svar
-    href: authentication-requests-and-responses.md
-  - name: Vanliga parametrar och sidhuvuden
-    href: common-parameters-and-headers.md
-  - name: Certifikat
-    items:
-    - name: Om nycklar, hemligheter och certifikat
-      href: about-keys-secrets-and-certificates.md
-    - name: Komma igång med certifikat
-      href: certificate-scenarios.md
-    - name: Metoder för att skapa certifikat
-      href: create-certificate.md
-    - name: Övervaka och hantera processen för att skapa certifikat
-      href: create-certificate-scenarios.md
-  - name: Vanliga säkerhetsattribut i Azure
-    href: key-vault-security-attributes.md
+    - name: Säkerhet
+      items:
+        - name: Säkerhetsöversikt
+          href: overview-security.md
+        - name: Vanliga säkerhetsattribut
+          href: key-vault-security-attributes.md
+        - name: Säkerhetsvärldar
+          href: key-vault-ovw-security-worlds.md
+        - name: Säkra ditt nyckelvalv
+          href: key-vault-secure-your-key-vault.md
+    - name: Vad är Key Vault?
+      href: key-vault-whatis.md
+    - name: Mjuk borttagning
+      href: key-vault-ovw-soft-delete.md
+    - name: Begränsning
+      href: key-vault-ovw-throttling.md
+    - name: Slutpunkter för virtuellt nätverk
+      href: key-vault-overview-vnet-service-endpoints.md
+    - name: 'Autentisering, begäranden och svar'
+      href: authentication-requests-and-responses.md
+    - name: Vanliga parametrar och sidhuvuden
+      href: common-parameters-and-headers.md
+    - name: Certifikat
+      items:
+        - name: 'Om nycklar, hemligheter och certifikat'
+          href: about-keys-secrets-and-certificates.md
+        - name: Komma igång med certifikat
+          href: certificate-scenarios.md
+        - name: Metoder för att skapa certifikat
+          href: create-certificate.md
+        - name: Övervaka och hantera processen för att skapa certifikat
+          href: create-certificate-scenarios.md
+    - name: Vanliga säkerhetsattribut i Azure
+      href: key-vault-security-attributes.md
 - name: Instruktionsguider
   items:
-  - name: Azure Key Vault-loggning
-    href: key-vault-logging.md
-  - name: Åtkomst bakom brandväggar
-    href: key-vault-access-behind-firewall.md
-  - name: Tillgänglighet och redundans
-    href: key-vault-disaster-recovery-guidance.md
-  - name: Ändra klientorganisations-ID
-    href: key-vault-subscription-move-fix.md
-  - name: Skapa och hantera med Azure CLI
-    href: key-vault-manage-with-cli2.md
-  - name: Använda mjuk borttagning i Key Vault med CLI
-    href: key-vault-soft-delete-cli.md
-  - name: Använda mjuk borttagning i Key Vault med Azure PowerShell
-    href: key-vault-soft-delete-powershell.md
-  - name: Bevilja åtkomst med hjälp av grupper
-    href: key-vault-group-permissions-for-apps.md
-  - name: Konfigurera brandväggar och virtuella nätverk
-    href: key-vault-network-security.md
-  - name: Java Development
-    items:
-    - name: Använda Spring Boot Starter
-      href: /java/azure/spring-framework/configure-spring-boot-starter-java-app-with-azure-key-vault
+    - name: Azure Key Vault-loggning
+      href: key-vault-logging.md
+    - name: Åtkomst bakom brandväggar
+      href: key-vault-access-behind-firewall.md
+    - name: Tillgänglighet och redundans
+      href: key-vault-disaster-recovery-guidance.md
+    - name: Ändra klientorganisations-ID
+      href: key-vault-subscription-move-fix.md
+    - name: Skapa och hantera med Azure CLI
+      href: key-vault-manage-with-cli2.md
+    - name: Använda mjuk borttagning i Key Vault med CLI
+      href: key-vault-soft-delete-cli.md
+    - name: Använda mjuk borttagning i Key Vault med Azure PowerShell
+      href: key-vault-soft-delete-powershell.md
+    - name: Bevilja åtkomst med hjälp av grupper
+      href: key-vault-group-permissions-for-apps.md
+    - name: Konfigurera brandväggar och virtuella nätverk
+      href: key-vault-network-security.md
+    - name: Java Development
+      items:
+        - name: Använda Spring Boot Starter
+          href: /java/azure/spring-framework/configure-spring-boot-starter-java-app-with-azure-key-vault
 - name: Referens
   items:
-  - name: Azure PowerShell
-    href: /powershell/module/az.keyvault/?view=azps-1.2.0#key_vault
-  - name: Azure CLI
-    href: /cli/azure/keyvault
-  - name: .NET
-    href: /dotnet/api/overview/azure/key-vault?view=azure-dotnet
-  - name: Java
-    href: /java/api/overview/azure/keyvault?view=azure-java-stable
-  - name: Node.js
-    href: /javascript/api/overview/azure/key-vault?view=azure-node-latest
-  - name: Python
-    href: /python/api/overview/azure/key-vault?view=azure-python
-  - name: REST
-    href: /rest/api/keyvault
-  - name: Metodtips
-    href: key-vault-best-practices.md
-  - name: Resource Manager-mall
-    href: /azure/templates/microsoft.keyvault/allversions
-  - name: Autentisering, begäranden och svar
-    href: authentication-requests-and-responses.md
-  - name: Vanliga parametrar och sidhuvuden
-    href: common-parameters-and-headers.md
-  - name: Utveckla
-    items:
-    - name: Utvecklarguide
-      href: key-vault-developers-guide.md
-    - name: HSM-skyddade nycklar
-      href: key-vault-hsm-protected-keys.md
-    - name: Migrera till .NET 2.0
-      href: key-vault-dotnet2api-release-notes.md
-    - name: Spara hemligheter för webbappar
-      href: vs-secure-secret-appsettings.md
-    - name: Tjänstautentisering med .NET
-      href: service-to-service-authentication.md
-    - name: Använda den anslutna tjänsten i Key Vault
-      href: vs-key-vault-add-connected-service.md
+    - name: Azure PowerShell
+      href: '/powershell/module/az.keyvault/?view=azps-1.2.0#key_vault'
+    - name: Azure CLI
+      href: /cli/azure/keyvault
+    - name: .NET
+      href: /dotnet/api/overview/azure/key-vault?view=azure-dotnet
+    - name: Java
+      href: /java/api/overview/azure/keyvault?view=azure-java-stable
+    - name: Node.js
+      href: /javascript/api/overview/azure/key-vault?view=azure-node-latest
+    - name: Python
+      href: /python/api/overview/azure/key-vault?view=azure-python
+    - name: REST
+      href: /rest/api/keyvault
+    - name: Metodtips
+      href: key-vault-best-practices.md
+    - name: Resource Manager-mall
+      href: /azure/templates/microsoft.keyvault/allversions
+    - name: 'Autentisering, begäranden och svar'
+      href: authentication-requests-and-responses.md
+    - name: Vanliga parametrar och sidhuvuden
+      href: common-parameters-and-headers.md
+    - name: Utveckla
+      items:
+        - name: Utvecklarguide
+          href: key-vault-developers-guide.md
+        - name: HSM-skyddade nycklar
+          href: key-vault-hsm-protected-keys.md
+        - name: Migrera till .NET 2.0
+          href: key-vault-dotnet2api-release-notes.md
+        - name: Spara hemligheter för webbappar
+          href: vs-secure-secret-appsettings.md
+        - name: Tjänstautentisering med .NET
+          href: service-to-service-authentication.md
+        - name: Använda den anslutna tjänsten i Key Vault
+          href: vs-key-vault-add-connected-service.md
 - name: Resurser
   items:
-  - name: Utveckla dina färdigheter med Microsoft Learn
-    href: /learn/browse/?products=azure-key-vault
-  - name: Autentisering, begäranden och svar
-    href: authentication-requests-and-responses.md
-  - name: Vanliga parametrar och sidhuvuden
-    href: common-parameters-and-headers.md
-  - name: Kundinformation
-    href: key-vault-customer-data.md
-  - name: Viktig information
-    href: key-vault-versions.md
-  - name: Prissättning
-    href: https://azure.microsoft.com/pricing/details/key-vault/
-  - name: Regional tillgänglighet
-    href: https://azure.microsoft.com/global-infrastructure/services/?products=key-vault
-  - name: Serviceavtal (SLA)
-    href: https://azure.microsoft.com/support/legal/sla/key-vault/
-  - name: Tjänstbegränsningar
-    href: key-vault-service-limits.md
-  - name: Tjänststatus
-    href: https://azure.microsoft.com/status/
-  - name: Tjänstuppdateringar
-    href: https://azure.microsoft.com/updates/?product=key-vault
-  - name: Blogg
-    href: https://blogs.technet.com/b/kv/
-  - name: Produktfeedback
-    href: https://feedback.azure.com/forums/906355-azure-key-vault
-ms.openlocfilehash: 884ea065833d34da17084fcee966ff34e4da02c2
-ms.sourcegitcommit: c3d1aa5a1d922c172654b50a6a5c8b2a6c71aa91
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 04/17/2019
-ms.locfileid: "59678521"
+    - name: Utveckla dina färdigheter med Microsoft Learn
+      href: /learn/browse/?products=azure-key-vault
+    - name: 'Autentisering, begäranden och svar'
+      href: authentication-requests-and-responses.md
+    - name: Vanliga parametrar och sidhuvuden
+      href: common-parameters-and-headers.md
+    - name: Kundinformation
+      href: key-vault-customer-data.md
+    - name: Viktig information
+      href: key-vault-versions.md
+    - name: Prissättning
+      href: 'https://azure.microsoft.com/pricing/details/key-vault/'
+    - name: Regional tillgänglighet
+      href: 'https://azure.microsoft.com/global-infrastructure/services/?products=key-vault'
+    - name: Serviceavtal (SLA)
+      href: 'https://azure.microsoft.com/support/legal/sla/key-vault/'
+    - name: Tjänstbegränsningar
+      href: key-vault-service-limits.md
+    - name: Tjänststatus
+      href: 'https://azure.microsoft.com/status/'
+    - name: Tjänstuppdateringar
+      href: 'https://azure.microsoft.com/updates/?product=key-vault'
+    - name: Blogg
+      href: 'https://blogs.technet.com/b/kv/'
+    - name: Produktfeedback
+      href: 'https://feedback.azure.com/forums/906355-azure-key-vault'
