--- a/articles/media-services/latest/TOC.yml
+++ b/articles/media-services/latest/TOC.yml
@@ -242,6 +242,9 @@
       href: /azure/templates/microsoft.media/allversions
 - name: Resurser
   items:
+    - name: Azure Media Services-community
+      displayName: 'forums, twitter, feedback'
+      href: media-services-community.md
     - name: Azure-översikt
       href: 'https://azure.microsoft.com/roadmap/?category=web-mobile'
     - name: Prissättning
